<resources>
    <string name="app_name">SmartPower</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="name">家電名稱</string>
    <string name="number">序號:</string>
    <string name="open">設定開啟時間:</string>
    <string name="close">設定關閉時間:</string>
    <string name="click">點我設定時間</string>
    <string name="Button">開關狀態:</string>
    <string name="on">開啟</string>
    <string name="off">關閉</string>
</resources>
