<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackgrund"
    tools:context=".Main2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/textopen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textopentime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorbutton"
            android:text="@string/click"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/textclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textclosetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorbutton"
            android:text="@string/click"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="36dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/flashon" />

        <Button
            android:id="@+id/ButtonOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/on"
            android:textSize="21sp" />

        <Button
            android:id="@+id/ButtonOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/off"
            android:textSize="21sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/dynamic_chart1"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>